deployment/k8s/veau-deployment.yml
apiVersion: 'apps/v1'
kind: 'Deployment'
metadata:
  name: 'veau-deployment'
  labels:
    app: 'veau'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: 'veau'
  template:
    metadata:
      labels:
        app: 'veau'
      annotations:
        appVersion: '1.3.8'
    spec:
      containers:
        - name: 'veau'
          image: 'gcr.io/veau-229916/veau:1.3.8'
          ports:
            - containerPort: 4000
          resources:
            requests:
              cpu: 50m
        - name: 'veau-redis'
          image: 'redis:5.0.4-alpine'
