deployment/k8s/veau-service.yml
apiVersion: 'v1'
kind: 'Service'
metadata:
  name: 'veau-service'
spec:
  type: 'NodePort'
  selector:
    app: 'veau'
  ports:
    - name: 'https'
      protocol: 'TCP'
      port: 9000
      targetPort: 4000
